# ReversiML

./: LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt  results.txt
archive/: README.txt
benchmarks/: benchmark.txt  benchmark1.txt  benchmark2.txt
model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/variables/: variables.data-00000-of-00001  variables.index
model2/: fingerprint.pb  saved_model.pb
model2/variables/: variables.data-00000-of-00001  variables.index
reversiml/: game.py  main.py  ml.py
