[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reversiml"
version = "0.0.1"
authors = [
  { name="Andrei Sova", email="andreisva2023@gmail.com" },
  { name="Jaelyn", email="idk@example.com" }
]
description = "Reversi game and AI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages]
find = {}

[project.scripts]
reversiml = "reversiml.main:main"